fix: update small design misalignments in various components (#608)
* refactor: update storybook error message text to match docs site

* refactor: move content into i18n files

* fix: update font weight for required label

* refactor: add mobile tokens for breadcrumbs item

* fix: button text alignment in details summary

* chore: update tokens package

--- a/packages/web/src/components/gcds-breadcrumbs/gcds-breadcrumbs-item.css
+++ b/packages/web/src/components/gcds-breadcrumbs/gcds-breadcrumbs-item.css
@@ -1,4 +1,4 @@
-@layer reset, default, hover, focus;
+@layer reset, default, hover, focus, mobile;
 
 @layer reset {
   :host(.gcds-breadcrumbs-item) {
@@ -30,6 +30,24 @@
     gcds-link::part(link) {
       margin: var(--gcds-breadcrumbs-item-margin);
       padding: var(--gcds-breadcrumbs-item-link-padding);
+    }
+  }
+}
+
+/* Note: mobile specific style decision */
+@layer mobile {
+  @media screen and (max-width: 30rem) {
+    :host(.gcds-breadcrumbs-item) {
+      display: block;
+
+      &:before {
+        top: var(--gcds-breadcrumbs-mobile-item-arrow-top);
+      }
+
+      gcds-link::part(link) {
+        margin: var(--gcds-breadcrumbs-mobile-item-margin);
+        padding: var(--gcds-breadcrumbs-mobile-item-padding);
+      }
     }
   }
 }
